--- a/front/sysadmin/package.json
+++ b/front/sysadmin/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
+    "next-intl": "^4.3.12",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
